--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.5",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "bower": "^1.8.2"
   }
 }
