--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bower-file": "^1.3.11",
+    "bower-files": "^4.0.0",
     "browserify": "^15.2.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
