--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "bower-file": "^1.3.11",
     "bower-files": "^4.0.0",
+    "browser-sync": "^2.23.6",
     "browserify": "^15.2.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
