--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "ping-pong",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "author": "",
   "license": "ISC",
@@ -19,10 +18,12 @@
     "gulp-jshint": "^2.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "jasmine": "^3.0.0",
     "jshint": "^2.9.5",
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "bower": "^1.8.2"
-  }
+  },
+  "description": ""
 }
